// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ng-update comment for --tui-thickness should add comment for --tui-thickness in html files: test.html 1`] = `
{
  "0. Before": "
                <tui-range [formControl]="control" [style.--tui-thickness.rem]="0.5"/>
                <input tuiSlider type="range" [formControl]="control" [style.--tui-thickness.rem]="0.5"/>
                <tui-input-range [formControl]="control" [style.--tui-thickness.rem]="0.25"/>

                <tui-range [formControl]="control" [style.--tui-thickness.px]="8"/>
                <input tuiSlider type="range" [formControl]="control" [style.--tui-thickness.px]="10"/>
                <tui-input-range [formControl]="control" [style.--tui-thickness.px]="12"/>

                <tui-range [formControl]="control" [style.--tui-thickness]="'8px'"/>
                <input tuiSlider type="range" [formControl]="control" [style.--tui-thickness]="'10px'"/>
                <tui-input-range [formControl]="control" [style.--tui-thickness]="'12px'"/>
            ",
  "1. After": "
                <!-- TODO: (Taiga UI migration) use --tui-thumb-size. Learn more: https://taiga-ui.dev/components/slider#size -->
<tui-range [formControl]="control" [style.--tui-thickness.rem]="0.5"/>
                <!-- TODO: (Taiga UI migration) use --tui-thumb-size. Learn more: https://taiga-ui.dev/components/slider#size -->
<input tuiSlider type="range" [formControl]="control" [style.--tui-thickness.rem]="0.5"/>
                <!-- TODO: (Taiga UI migration) use --tui-thumb-size. Learn more: https://taiga-ui.dev/components/slider#size -->
<tui-input-range [formControl]="control" [style.--tui-thickness.rem]="0.25"/>

                <!-- TODO: (Taiga UI migration) use --tui-thumb-size. Learn more: https://taiga-ui.dev/components/slider#size -->
<tui-range [formControl]="control" [style.--tui-thickness.px]="8"/>
                <!-- TODO: (Taiga UI migration) use --tui-thumb-size. Learn more: https://taiga-ui.dev/components/slider#size -->
<input tuiSlider type="range" [formControl]="control" [style.--tui-thickness.px]="10"/>
                <!-- TODO: (Taiga UI migration) use --tui-thumb-size. Learn more: https://taiga-ui.dev/components/slider#size -->
<tui-input-range [formControl]="control" [style.--tui-thickness.px]="12"/>

                <!-- TODO: (Taiga UI migration) use --tui-thumb-size. Learn more: https://taiga-ui.dev/components/slider#size -->
<tui-range [formControl]="control" [style.--tui-thickness]="'8px'"/>
                <!-- TODO: (Taiga UI migration) use --tui-thumb-size. Learn more: https://taiga-ui.dev/components/slider#size -->
<input tuiSlider type="range" [formControl]="control" [style.--tui-thickness]="'10px'"/>
                <!-- TODO: (Taiga UI migration) use --tui-thumb-size. Learn more: https://taiga-ui.dev/components/slider#size -->
<tui-input-range [formControl]="control" [style.--tui-thickness]="'12px'"/>
            ",
}
`;

exports[`ng-update comment for --tui-thickness should add comment for --tui-thickness in html files: test.ts 1`] = `
{
  "0. Before": "
                import {TuiInputRange} from '@taiga-ui/kit';
                import {TuiRange} from '@taiga-ui/kit/components/range';
                import {TuiSlider} from '@taiga-ui/kit/components/slider';

                @Component({
                    templateUrl: './test.html',
                    imports: [TuiRange, TuiSlider, TuiInputRange],
                })
                export class TestComponent {}
            ",
  "1. After": "import { TuiSlider } from "@taiga-ui/core";

                import {TuiInputRange} from '@taiga-ui/kit';
                import {TuiRange} from '@taiga-ui/kit/components/range';

                @Component({
                    templateUrl: './test.html',
                    imports: [TuiRange, TuiSlider, TuiInputRange],
                })
                export class TestComponent {}
            ",
}
`;

exports[`ng-update comment for --tui-thickness should add comment for --tui-thickness in styles: test.less 1`] = `
{
  "0. Before": "
                @import '@taiga-ui/core/styles/taiga-ui-local';

                :host {
                    --tui-thickness: 1.5rem;
                }
            ",
  "1. After": "
                @import '@taiga-ui/styles/utils';

                :host {
// TODO: (Taiga UI migration) use --tui-thumb-size. Learn more: https://taiga-ui.dev/components/slider#size
                    --tui-thickness: 1.5rem;
                }
            ",
}
`;

exports[`ng-update comment for --tui-thickness should add comment for --tui-thickness in ts files: test.ts 1`] = `
{
  "0. Before": "
                import { Component } from "@angular/core";

                @Component({
                    standalone: true,
                    template: \`
                        <tui-range [formControl]="control" [style.--tui-thickness.rem]="0.5"/>
                        <input tuiSlider type="range" [formControl]="control" [style.--tui-thickness.rem]="0.5"/>
                        <tui-input-range [formControl]="control" [style.--tui-thickness.rem]="0.25"/>

                        <tui-range [formControl]="control" [style.--tui-thickness.px]="8"/>
                        <input tuiSlider type="range" [formControl]="control" [style.--tui-thickness.px]="10"/>
                        <tui-input-range [formControl]="control" [style.--tui-thickness.px]="12"/>

                        <tui-range [formControl]="control" [style.--tui-thickness]="'8px'"/>
                        <input tuiSlider type="range" [formControl]="control" [style.--tui-thickness]="'10px'"/>
                        <tui-input-range [formControl]="control" [style.--tui-thickness]="'12px'"/>
                    \`,
                    host: {
                      '[style.--tui-background-accent-2-pressed]': 'red',
                      '[style.--tui-thickness.rem]': '1.25',
                    }
                })
                export class Test {
                }
            ",
  "1. After": "
                import { Component } from "@angular/core";

                @Component({
                    standalone: true,
                    template: \`
                        <!-- TODO: (Taiga UI migration) use --tui-thumb-size. Learn more: https://taiga-ui.dev/components/slider#size -->
<tui-range [formControl]="control" [style.--tui-thickness.rem]="0.5"/>
                        <!-- TODO: (Taiga UI migration) use --tui-thumb-size. Learn more: https://taiga-ui.dev/components/slider#size -->
<input tuiSlider type="range" [formControl]="control" [style.--tui-thickness.rem]="0.5"/>
                        <!-- TODO: (Taiga UI migration) use --tui-thumb-size. Learn more: https://taiga-ui.dev/components/slider#size -->
<tui-input-range [formControl]="control" [style.--tui-thickness.rem]="0.25"/>

                        <!-- TODO: (Taiga UI migration) use --tui-thumb-size. Learn more: https://taiga-ui.dev/components/slider#size -->
<tui-range [formControl]="control" [style.--tui-thickness.px]="8"/>
                        <!-- TODO: (Taiga UI migration) use --tui-thumb-size. Learn more: https://taiga-ui.dev/components/slider#size -->
<input tuiSlider type="range" [formControl]="control" [style.--tui-thickness.px]="10"/>
                        <!-- TODO: (Taiga UI migration) use --tui-thumb-size. Learn more: https://taiga-ui.dev/components/slider#size -->
<tui-input-range [formControl]="control" [style.--tui-thickness.px]="12"/>

                        <!-- TODO: (Taiga UI migration) use --tui-thumb-size. Learn more: https://taiga-ui.dev/components/slider#size -->
<tui-range [formControl]="control" [style.--tui-thickness]="'8px'"/>
                        <!-- TODO: (Taiga UI migration) use --tui-thumb-size. Learn more: https://taiga-ui.dev/components/slider#size -->
<input tuiSlider type="range" [formControl]="control" [style.--tui-thickness]="'10px'"/>
                        <!-- TODO: (Taiga UI migration) use --tui-thumb-size. Learn more: https://taiga-ui.dev/components/slider#size -->
<tui-input-range [formControl]="control" [style.--tui-thickness]="'12px'"/>
                    \`,
                    host: {
                      '[style.--tui-background-accent-2-pressed]': 'red',
// TODO: (Taiga UI migration) use --tui-thumb-size. Learn more: https://taiga-ui.dev/components/slider#size
                      '[style.--tui-thickness.rem]': '1.25',
                    }
                })
                export class Test {
                }
            ",
}
`;
